// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header add custom about 1`] = `
Array [
  <h1
    className="sc-bdfBwQ dCppHW"
  >
    Michael Danilov
  </h1>,
  <p
    className="sc-gsTCUz bGwQZY"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum",
      }
    }
  />,
]
`;

exports[`Header english version renders correctly 1`] = `
<h1
  className="sc-bdfBwQ dCppHW"
>
  Michael Danilov
</h1>
`;

exports[`Header russian version renders correctly 1`] = `
<h1
  className="sc-bdfBwQ dCppHW"
>
  Михаил Данилов
</h1>
`;
